updated approval process API
