# src/api/Models/Beam.cs
@@ -32,11 +32,11 @@ public class Beam
     /// <summary>Notes about the beam.</summary>
     public string? Note { get; set; }
 
-    /// <summary>Name of the person who accepted/signed off the beam check.</summary>
-    public string? AcceptedBy { get; set; }
+    /// <summary>Name of the person who approved/signed off the beam check.</summary>
+    public string? ApprovedBy { get; set; }
 
-    /// <summary>Date when the beam check was accepted/signed off.</summary>
-    public DateTime? AcceptedDate { get; set; }
+    /// <summary>Date when the beam check was approved/signed off.</summary>
+    public DateTime? ApprovedDate { get; set; }
 
     /// <summary>
     /// Convenience property representing a single numeric value to display in UIs.
